--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Reventic/Laraventic",
+  "name": "reventic/laraventic",
   "type": "library",
   "description": "Reventic Laravel integration",
   "keywords": [
